# zaoai-helper

./: .gitignore  Cargo.toml  LICENSE  README.md  chapter_opening.txt  chapters.txt  chapters.xml
output/: S01E01-I'm Used to It [1614CC97].chapters.txt
output/Seirei Gensouki/: [EMBER] Seirei Gensouki S2 - 01.chapters.txt
output/Shadow House/: Shadows House - S01E01 - The Shadow And Her Doll.chapters.txt
src/: chapters.rs  file.rs  lib.rs  main.rs  mkv.rs  soloud.rs  temp.rs  utils.rs
