[package]
name = "zaohelp"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.31"       # for parsing/writing chapter XML
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"           # optional, for easier error handling
thiserror = "1.0"        # optional, custom error types
tempfile = "3.10"        # optional, for working with temp files
serde-xml-rs = "0.8.1"
